# or-tools

./: .dockerignore  .gitignore  AIRSPACE-README.md  CMakeLists.txt  Makefile  arm.sh  go  native.sh  universal.sh
cmake/: README.md  go.cmake  host.CMakeLists.txt
cmake/dependencies/: CMakeLists.txt
docs/cpp/: classoperations__research_1_1_p_r_o_t_o_b_u_f___f_i_n_a_l.html
examples/contrib/: CMakeLists.txt
examples/go/: CMakeLists.txt
examples/go/constraintsolver/: README.md  cpdptw_test.go  vrptw_test.go
examples/python/: CMakeLists.txt
go/ortools/: go.mod
go/ortools/constraintsolver/: README.md  cpdptw_test.go  gowrap_constraint_solver.go  pdptw_test.go  routing_enums.pb.go  routing_ils.pb.go  routing_parameters.pb.go  search_limit.pb.go  solver_parameters.pb.go  vrppd_test.go  vrptw_test.go
go/ortools/sat/: sat_parameters.pb.go
go/ortools/util/: optional_boolean.pb.go
makefiles/: Makefile  Makefile.archive.mk  Makefile.go.mk  Makefile.port.mk  Makefile.unix.mk
makefiles/docker/debian/: Dockerfile  go.Dockerfile
ortools/constraint_solver/: routing.h  routing_enums.proto  routing_ils.proto  routing_parameters.proto  search_limit.proto  solver_parameters.proto
ortools/constraint_solver/go/: CMakeLists.txt  constraint_solver.i  routing.i  routing_index_manager.i  routing_types.i
ortools/sat/: sat_parameters.proto
ortools/util/: optional_boolean.proto
ortools/util/go/: cgo.i  function.i  proto.i  (+1 more)
tools/: cross_compile.sh
tools/release/: amd64_airspace.Dockerfile  build_delivery_airspace.sh  build_delivery_mac.sh  build_delivery_unix.sh
